footer: spacing fix

--- a/squelettes/less/app.less
+++ b/squelettes/less/app.less
@@ -2,3 +2,12 @@
 @import "../../bower_components/bootstrap/less/variables.less";
 @import "../../bower_components/bootstrap/less/mixins.less";
 @import "locals.less"; // local variables
+
+
+.footer {
+  border: 1px solid #eeeeee;
+  background-color: #f8f8f8;
+  footer, .related{
+    padding: 1em 0;
+  }
+}
